# zedis

./: .gitignore  COMPARE.md  Cargo.toml  README.md  appendonly.aof  index.html  plan.md
examples/csharp/: 01_BasicKV.cs  02_VectorSearch.cs  03_JsonStore.cs  04_BloomFilter.cs  05_TimeSeries.cs  06_GraphProcessing.cs  07_ComplexStructures.cs  09_Probabilistic.cs  10_PubSub.cs  11_Transactions.cs
examples/go/: 01_basic_kv.go  02_vector_search.go  03_json_store.go  04_bloom_filter.go  05_time_series.go  06_graph_processing.go  07_complex_structures.go  09_probabilistic.go  10_pubsub.go  11_transactions.go
examples/nodejs/: 01_basic_kv.js  02_vector_search.js  03_json_store.js  04_bloom_filter.js  05_time_series.js  06_graph_processing.js  07_complex_structures.js  08_chat_memory.js  09_probabilistic.js  10_pubsub.js  11_transactions.js
examples/php/: 01_basic_kv.php  02_vector_search.php  03_json_store.php  04_bloom_filter.php  05_time_series.php  06_graph_processing.php  07_complex_structures.php  09_probabilistic.php  10_pubsub.php  11_transactions.php
examples/python/: 01_basic_kv.py  02_vector_search.py  03_json_store.py  04_bloom_filter.py  05_time_series.py  06_graph_processing.py  07_complex_structures.py  08_rag_pipeline.py  09_probabilistic.py  10_pubsub.py  11_transactions.py  12_streams_geo.py
examples/vbnet/: 01_BasicKV.vb  02_VectorSearch.vb  03_JsonStore.vb  04_BloomFilter.vb  05_TimeSeries.vb  06_GraphProcessing.vb  07_ComplexStructures.vb  09_Probabilistic.vb  10_PubSub.vb  11_Transactions.vb
landing/: script.js  style.css
src/: config.rs  core.rs  hardware.rs  main.rs  persistence.rs  scripting.rs  security.rs  server.rs
src/compatibility/: elastic.rs  mod.rs
src/core/: ai.rs  executor.rs  protocol.rs  storage.rs  universe.rs
src/core/structs/: allocator.rs  bloom.rs  embedder.rs  json.rs  mod.rs  probabilistic.rs  sso_string.rs  stream.rs  vector.rs  zset.rs
src/flow/: config.rs  etl.rs  manager.rs  mod.rs
src/io/: connection.rs  listener.rs  mod.rs  traits.rs
src/security/: acl.rs  ddos_guard.rs  tls.rs
tests/: concurrency_stress_test.py  god_tier_features.py  god_tier_persistence_test.rs  integration_test.rs
